--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 .idea/
+build/
+devel/
+install/
+*.swp
+*.pyc
+*.log
+*.bag
+.vscode/
+.idea/
+*.user
+*.db
+*.sqlite
+*.so
+*.out
+*.o
+*.bin
+*.exe
+*.launch~
